ready to go live! 🎉🎉🎉

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <!-- Trying Global Fabric JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.4/fabric.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Merriweather:wght@400;700&display=swap">
+    <head>
+      <!-- Google Fonts for cursive fonts -->
+      <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Pacifico&family=Great+Vibes&family=Satisfy&family=Lobster&family=Allura&family=Kaushan+Script&family=Sacramento&family=Tangerine&family=Petit+Formal+Script&family=Cookie&family=Courgette&display=swap" rel="stylesheet">
+    </head>
+    
+
+
+  </head>
 
 
   </head>
